<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="600dp"
        android:layout_marginTop="20dp"
        android:padding="0dp"
        android:id="@+id/scrollView">

    <LinearLayout
        android:id="@+id/linearLayoutResultado3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-54dp">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="250dp"
            android:layout_height="122dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="100dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayoutResultado"
                android:layout_width="250dp"
                android:layout_height="122dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:gravity="center"
                tools:ignore="VisualLintBounds"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="7dp">

                <TextView
                    android:id="@+id/puntospos"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:text="@string/puntos_posibles"
                    android:textSize="25sp"
                    tools:ignore="TextSizeCheck" />

                <TextView
                    android:id="@+id/puntostt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/puntos_totales"
                    android:textSize="25sp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="289dp"
            android:layout_height="19dp"
            android:layout_marginTop="1dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/star5"
            tools:ignore="ImageContrastCheck" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="100dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="30dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayoutResultado2"
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:layout_marginTop="0dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:layout_editor_absoluteX="1dp"
                tools:layout_editor_absoluteY="0dp">


                <TextView
                    android:id="@+id/textMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textSize="25sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>
</ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>